tests/negative/gold/export-local2-test.gold
tests/negative/export-local2-test.toit:5:33: error: Name clash with toplevel declaration 'foo'
import .export-local2-test show foo
                                ^~~
tests/negative/export-local2-test.toit:9:1: note: Toplevel declaration of 'foo'
foo:
^~~
tests/negative/export-local2-test.toit:7:8: error: Can't export local 'foo'
export foo
       ^~~
Compilation failed
